--- a/pages/q5js.html
+++ b/pages/q5js.html
@@ -1,7 +1,7 @@
 <meta charset=utf-8>
 
-<link rel=stylesheet href=https://PyScript.net/alpha/pyscript.css />
-<script defer src=https://PyScript.net/alpha/pyscript.js></script>
+<link rel=stylesheet href=https://PyScript.net/latest/pyscript.css />
+<script defer src=https://PyScript.net/latest/pyscript.js></script>
 
 <script defer src=https://cdn.JsDelivr.net/npm/q5xjs></script>
 
