🔆⏪ Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+
 <font size=6><b><ol>
   <li><a href=pages/random-flavor.html>random-flavor</a>
   <li><a href=pages/pjs.html>pjs</a>
