--- a/pages/pjs-q5js.html
+++ b/pages/pjs-q5js.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+
 <meta charset=utf-8>
 
 <!-- <link rel=stylesheet href=https://PyScript.net/latest/pyscript.css /> -->
@@ -6,18 +8,6 @@
 <script defer src=https://Unpkg.com/processing-js></script>
 <script defer src=https://cdn.JsDelivr.net/npm/q5xjs></script>
 
-<py-env>
-  - paths:
-    - ../app/sketch.py
-
-    - ../modules/grid.py
-    - ../modules/spot.py
-    - ../modules/step.py
-
-    - ../utils/attribute.py
-    - ../utils/color.py
-    - ../utils/discover.py
-    - ../utils/size.py
-</py-env>
+<py-config src=../index.toml></py-config>
 
 <py-script src=../index.py data-flavors=pjs;q5js></py-script>
