--- a/pages/random-flavor.html
+++ b/pages/random-flavor.html
@@ -2,6 +2,8 @@
 
 <meta charset=utf-8>
 
+<base href=.. />
+
 <link rel=stylesheet href=https://PyScript.net/latest/pyscript.css />
 <script defer src=https://PyScript.net/latest/pyscript.js></script>
 
@@ -9,8 +11,8 @@
 <script defer src=https://cdn.JsDelivr.net/npm/q5xjs></script>
 <script defer src=https://cdn.JsDelivr.net/npm/p5></script>
 
-<py-config src=../index.toml></py-config>
+<py-config src=index.toml></py-config>
 
-<py-script defer src=../index.py></py-script>
+<py-script defer src=index.py></py-script>
 
 <h3>Self Avoiding Walk II (<i id=flavor>flavor</i>/PS ESM Instance Mode):</h3>
