--- a/pages/random-flavor.html
+++ b/pages/random-flavor.html
@@ -2,17 +2,17 @@
 
 <meta charset=utf-8>
 
-<base href=.. />
+<base href=..>
+<link rel=icon href=favicon.ico>
 
-<link rel=stylesheet href=https://PyScript.net/latest/pyscript.css />
-<script defer src=https://PyScript.net/latest/pyscript.js></script>
+<link rel=stylesheet href=//PyScript.net/latest/pyscript.css>
+<script defer src=//PyScript.net/latest/pyscript.js></script>
 
-<script defer src=https://Unpkg.com/processing-js></script>
-<script defer src=https://cdn.JsDelivr.net/npm/q5xjs></script>
-<script defer src=https://cdn.JsDelivr.net/npm/p5></script>
+<script defer src=//Unpkg.com/processing-js></script>
+<script defer src=//cdn.JsDelivr.net/npm/q5xjs></script>
+<script defer src=//cdn.JsDelivr.net/npm/p5></script>
 
 <py-config src=index.toml></py-config>
-
 <py-script defer src=index.py></py-script>
 
 <h3>Self Avoiding Walk II (<i id=flavor>flavor</i>/PS ESM Instance Mode):</h3>
