--- a/pages/4pjs.html
+++ b/pages/4pjs.html
@@ -2,11 +2,13 @@
 
 <meta charset=utf-8>
 
-<!-- <link rel=stylesheet href=https://PyScript.net/latest/pyscript.css /> -->
-<script defer src=https://PyScript.net/latest/pyscript.js></script>
+<base href=..>
+<link rel=icon href=favicon.ico>
 
-<script defer src=https://Unpkg.com/processing-js></script>
+<!-- <link rel=stylesheet href=//PyScript.net/latest/pyscript.css> -->
+<script defer src=//PyScript.net/latest/pyscript.js></script>
 
-<py-config src=../index.toml></py-config>
+<script defer src=//Unpkg.com/processing-js></script>
 
-<py-script src=../index.py data-flavors=pjs,pjs,pjs,pjs></py-script>
+<py-config src=index.toml></py-config>
+<py-script src=index.py data-flavors=pjs,pjs,pjs,pjs></py-script>
