--- a/pages/pjs-q5js-p5js.html
+++ b/pages/pjs-q5js-p5js.html
@@ -2,13 +2,15 @@
 
 <meta charset=utf-8>
 
-<!-- <link rel=stylesheet href=https://PyScript.net/latest/pyscript.css /> -->
-<script defer src=https://PyScript.net/latest/pyscript.js></script>
+<base href=..>
+<link rel=icon href=favicon.ico>
 
-<script defer src=https://Unpkg.com/processing-js></script>
-<script defer src=https://cdn.JsDelivr.net/npm/q5xjs></script>
-<script defer src=https://cdn.JsDelivr.net/npm/p5></script>
+<!-- <link rel=stylesheet href=//PyScript.net/latest/pyscript.css> -->
+<script defer src=//PyScript.net/latest/pyscript.js></script>
 
-<py-config src=../index.toml></py-config>
+<script defer src=//Unpkg.com/processing-js></script>
+<script defer src=//cdn.JsDelivr.net/npm/q5xjs></script>
+<script defer src=//cdn.JsDelivr.net/npm/p5></script>
 
-<py-script src=../index.py data-flavors=pjs;q5js;p5js></py-script>
+<py-config src=index.toml></py-config>
+<py-script src=index.py data-flavors=pjs;q5js;p5js></py-script>
