--- a/pages/q5js.html
+++ b/pages/q5js.html
@@ -2,13 +2,15 @@
 
 <meta charset=utf-8>
 
-<link rel=stylesheet href=https://PyScript.net/latest/pyscript.css />
-<script defer src=https://PyScript.net/latest/pyscript.js></script>
+<base href=..>
+<link rel=icon href=favicon.ico>
 
-<script defer src=https://cdn.JsDelivr.net/npm/q5xjs></script>
+<link rel=stylesheet href=//PyScript.net/latest/pyscript.css>
+<script defer src=//PyScript.net/latest/pyscript.js></script>
 
-<py-config src=../index.toml></py-config>
+<script defer src=//cdn.JsDelivr.net/npm/q5xjs></script>
 
-<py-script src=../index.py data-flavors=q5js></py-script>
+<py-config src=index.toml></py-config>
+<py-script src=index.py data-flavors=q5js></py-script>
 
 <h3>Self Avoiding Walk II (q5js/PS ESM Instance Mode):</h3>
